--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-    "name": "rrm",
-    "version": "0.0.1",
-    "description": "RRM",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/SamsonIT/rrm.git"
-    },
-    "licenses": ["MIT"],
-    "dependencies": {
-        "jasmine-node": ">=1.3.1"
-    },
-    "scripts": {
-        "test": "jasmine-node --verbose --requireJsSetup spec/initialize/initialize.js spec/*Spec.js"
-    }
+  "name": "rrm",
+  "version": "0.0.1",
+  "description": "RRM",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SamsonIT/rrm.git"
+  },
+  "licenses": [
+    "MIT"
+  ],
+  "dependencies": {
+    "jasmine-node": ">=1.3.1"
+  },
+  "scripts": {
+    "test": "jasmine-node --verbose --requireJsSetup spec/initialize/initialize.js spec/*Spec.js"
+  },
+  "devDependencies": {
+    "gulp": "~3.5.5"
+  }
 }
