--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "jasmine-node": ">=1.3.1"
   },
+  "main": "src",
   "scripts": {
-    "test": "jasmine-node --verbose --requireJsSetup spec/initialize/initialize.js spec/*Spec.js"
+    "test": "phantomjs spec/initialize/run-jasmine.js SpecRunner.html"
   },
   "devDependencies": {
     "gulp": "~3.5.5"
