--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "RRM",
   "version": "2.2.0",
   "description": "Manage relations between entities in JavaScript",
-  "main": "dist/rrm.js",
+  "main": "build/rrm.js",
   "scripts": {
     "test": "gulp test"
   },
